--- a/homepage/business.css
+++ b/homepage/business.css
@@ -1,32 +1,48 @@
-/* === Container that holds the text and all images === */
-.text-container {
-  position: relative;
-  max-width: 400px;
-  margin-top: -30px; 
+/* Full height for body */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-/* === Heading (VINTAGE VAULT) === */
+/* Container that holds text and images */
+.text-box {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+/* Inner content box */
+.text-container {
+  position: relative;
+  width: 100%;
+  max-width: 1000px;
+  padding: 20px;
+}
+
+/* Heading */
 .vintage-vault {
   font-family: 'Koulen', cursive;
   font-size: 3rem;
   margin-bottom: 10px;
-  color: #000080; /* Dark blue */
+  color: #000080;
   text-transform: uppercase;
   position: relative;
-  top: -10px; 
+  top: -10px;
 }
 
-/* === Paragraph text === */
+/* Paragraph text */
 .text-container p {
   font-family: 'Kodchasan', sans-serif;
   color: black;
   margin-top: 0;
 }
 
+/* Images */
 .img1 {
   position: absolute;
   width: 180px;
-  bottom: -170px; 
+  bottom: -170px;
   left: 30px;
   z-index: 1;
 }
@@ -35,15 +51,15 @@
   position: absolute;
   width: 140px;
   top: 0;
-  right: -140px;
+  right: -100px;
   z-index: 1;
 }
 
-/* === Clothes image */
 .img3 {
   position: absolute;
-  width: 270px;       
-  bottom: -200px;     
-  left: 260px;        
-  z-index: 1;  
+  width: 270px;
+  bottom: -200px;
+  left: 260px;
+  z-index: 1;
 }
+
